# evebattlehistory

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
app/: backup.py  config.py  main.py  middleware.py
app/analytics/: composition.py  damage_attribution.py  ewar.py  filters.py  fleet.py  item_losses.py  recompute.py  reconcile.py  timeline.py  (+3 more)
data/: capital_ships.json
data_demo/: names.json  resolved_br_demo.json  resolved_window_demo.json  users_api.json
deploy/: Caddyfile  Dockerfile  deploy.sh  docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scripts/: backup-loop.sh  diagnose_named_ships.py
tests/: conftest.py  test_association.py  test_backup.py  test_br_delete.py  test_br_systems.py  test_brcharship_model.py  test_composition.py  test_contract.py  test_damage_attribution.py  test_db_ingest.py  test_e1_log_only_participants.py  test_e2_access_control.py  test_e3_fleet_timeline.py  test_e4a_multi_source.py  test_entity_split.py  test_esi_resolve.py  test_ewar.py  test_extract.py  test_fights.py  test_filters.py  test_isk_value.py  test_item_losses.py  test_killmail_parse.py  test_log_ingest.py  test_log_parse.py  test_offbr_cache.py  test_offbr_participants.py  test_offbr_resolve.py  test_persist_damage_taken.py  test_pipeline.py  test_recompute.py  test_reconcile.py  test_reparse.py  test_sde_load.py  test_sde_process.py  test_sde_refresh.py  test_ship_override_api.py  test_sides_api.py  test_sides_config.py  test_spa_fallback.py  (+5 more)
(+167 files in other folders)
